[gd_scene load_steps=2 format=3 uid="uid://dxe6u75y1a2r6"]

[ext_resource type="Script" uid="uid://b4cmmq6ms8dcd" path="res://scripts/UI/hero_upgrades_window.gd" id="1_bvff0"]

[node name="HeroUpgradesWindow" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_bvff0")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="HBox" type="HBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Left" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeroListLabel" type="Label" parent="Panel/HBox/Left"]
layout_mode = 2
text = "Owned Heroes"

[node name="HeroList" type="ItemList" parent="Panel/HBox/Left"]
layout_mode = 2
size_flags_vertical = 3

[node name="Right" type="VBoxContainer" parent="Panel/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="HBoxContainer" parent="Panel/HBox/Right"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Panel/HBox/Right/Header"]
layout_mode = 2
text = "Hero Upgrades"

[node name="HeroNameLabel" type="Label" parent="Panel/HBox/Right/Header"]
layout_mode = 2
text = "-"

[node name="CloseButton" type="Button" parent="Panel/HBox/Right/Header"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "Close"

[node name="Details" type="HBoxContainer" parent="Panel/HBox/Right"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="LevelLabel" type="Label" parent="Panel/HBox/Right/Details"]
layout_mode = 2
text = "Level: 1"

[node name="XpLabel" type="Label" parent="Panel/HBox/Right/Details"]
layout_mode = 2
text = "XP: 0 / 0"

[node name="PointsLabel" type="Label" parent="Panel/HBox/Right/Details"]
layout_mode = 2
text = "Unspent: 0"

[node name="Stats" type="VBoxContainer" parent="Panel/HBox/Right"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="StatsLabel" type="Label" parent="Panel/HBox/Right/Stats"]
layout_mode = 2
text = "Stats"

[node name="StatsScroll" type="ScrollContainer" parent="Panel/HBox/Right/Stats"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatsList" type="VBoxContainer" parent="Panel/HBox/Right/Stats/StatsScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6
